; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_ads1115.c_ads1115_lua_reset.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_ads1115.c_ads1115_lua_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ads1115_i2c_id = common dso_local global i32 0, align 4
@general_i2c_addr = common dso_local global i32 0, align 4
@PLATFORM_I2C_DIRECTION_TRANSMITTER = common dso_local global i32 0, align 4
@ads1115_i2c_reset = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ads1115_lua_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ads1115_lua_reset(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32, i32* @ads1115_i2c_id, align 4
  %4 = call i32 @platform_i2c_send_start(i32 %3)
  %5 = load i32, i32* @ads1115_i2c_id, align 4
  %6 = load i32, i32* @general_i2c_addr, align 4
  %7 = load i32, i32* @PLATFORM_I2C_DIRECTION_TRANSMITTER, align 4
  %8 = call i32 @platform_i2c_send_address(i32 %5, i32 %6, i32 %7)
  %9 = load i32, i32* @ads1115_i2c_id, align 4
  %10 = load i32, i32* @ads1115_i2c_reset, align 4
  %11 = call i32 @platform_i2c_send_byte(i32 %9, i32 %10)
  %12 = load i32, i32* @ads1115_i2c_id, align 4
  %13 = call i32 @platform_i2c_send_stop(i32 %12)
  ret i32 0
}

declare dso_local i32 @platform_i2c_send_start(i32) #1

declare dso_local i32 @platform_i2c_send_address(i32, i32, i32) #1

declare dso_local i32 @platform_i2c_send_byte(i32, i32) #1

declare dso_local i32 @platform_i2c_send_stop(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
